--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,31 @@
+body {
+  background-color: black;
+}
+
 .App {
   text-align: center;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(20px);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -39,4 +60,9 @@
 
 button {
   margin: 30px;
+}
+
+#playPause {
+  font-size: 30px;
+  cursor: pointer;
 }
